[package]
name = "lbx"
version = "0.2.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Command-line tool for working with LNP/BP technology stack"
keywords = ["bitcoin", "lightning", "blockchain", "layer-2", "cryptography"]
readme = "README.md"
edition = "2018"

[dependencies]
bech32 = "~0.7"
log = "~0.4"
env_logger = "~0.7"
toml = "~0.5"
yaml = "~0.3"
derive_wrapper = "~0.1"
serde = "~1.0"
serde_derive = "~1.0"
rand = "~0.7"
clap = "=3.0.0-beta.1"
lnpbp = { git = "https://github.com/lnp-bp/rust-lnpbp.git", branch = "develop", features = ["all"] }
