[package]
name = "lbx"
version = "0.1.0-beta.2"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Command-line tool for working with LNP/BP technology stack"
keywords = ["bitcoin", "lightning", "blockchain", "layer-2", "cryptography"]
readme = "README.md"
edition = "2018"

[dependencies]
amplify = "~0.1.7"
derive_wrapper = "~0.1.6"
lnpbp = { path = "../rust-lnpbp", features = ["all"] }
bech32 = "~0.7.2"
clap = "=3.0.0-beta.1"
log = "~0.4.8"
env_logger = "~0.7.1"
toml = "~0.5.6"
serde = "~1.0.114"
serde_derive = "~1.0.114"
rand = "~0.7.3"

[dependencies.bigint]
version = "~4.4.3"
features = [ "std" ]
