[package]
name = "lbx"
version = "0.2.0"
license = "MIT"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "Command-line tool for working with LNP/BP technology stack"
keywords = ["bitcoin", "lightning", "blockchain", "layer-2", "cryptography"]
readme = "README.md"
edition = "2018"

[dependencies]
amplify = "3"
bech32 = "0.7.2"
bitcoin = "0.26"
clap = "=3.0.0-beta.2"
serde = "1"
serde_derive = "1"
rand = "0.8"
